--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,14 +11,14 @@ endif()
 message(STATUS "Source Dir ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/KTX-Software ${CMAKE_CURRENT_SOURCE_DIR}/KTX-Software/build)
 
-project(libktx)
+project(toktx)
 
 set(
   KTX_SOURCE_DIR "${PROJECT_SOURCE_DIR}/KTX-Software"
 )
 
 set(
-  LIBKTX_EXPORTED_FUNCTIONS "_malloc,_free" 
+  LIBKTX_EXPORTED_FUNCTIONS "_malloc,_free,_main" 
 )
 set(
   LIBKTX_EMC_LINK_FLAGS
@@ -30,52 +30,75 @@ set(
   "SHELL:-s MALLOC=emmalloc"
   "SHELL:-s MODULARIZE=1"
   "SHELL:-s FULL_ES3=1"
-  "SHELL:-s EXPORT_NAME=LIBKTX"
+  "SHELL:-s INVOKE_RUN=0"
+  "SHELL:-s EXPORT_NAME=TOKTX"
   "SHELL:-s EXPORTED_RUNTIME_METHODS=[\'GL\']"
   "SHELL:-s GL_PREINITIALIZED_CONTEXT=1"
-  "SHELL:-s EXPORTED_FUNCTIONS=${LIBWEP_EXPORTED_FUNCTIONS}"
+  "SHELL:-s EXPORTED_FUNCTIONS=${LIBKTX_EXPORTED_FUNCTIONS}"
   "SHELL:-s EXPORTED_RUNTIME_METHODS=cwrap,getValue"
 )
 
 #message(STATUS "HELLOOOOOOOOOO Dir ${PROJECT_SOURCE_DIR}")
 
-add_executable(libktx 
-  src/ktx_encoder.cpp
+add_executable(toktx 
+  ${KTX_SOURCE_DIR}/lib/basisu/encoder/jpgd.cpp
+  ${KTX_SOURCE_DIR}/lib/basisu/encoder/jpgd.h
   ${KTX_SOURCE_DIR}/interface/js_binding/ktx_wrapper.cpp 
-  ${KTX_SOURCE_DIR}/tools/toktx/image.cc 
+  src/image.cc
+  src/image.hpp
+  src/jpgimage.cc
+  src/lodepng.cc
+  src/lodepng.h
+  src/npbmimage.cc
+  src/pngimage.cc
+  src/toktx.cc
 )
-target_link_libraries( libktx ktx objUtil )
+create_version_header( src toktx )
+
+target_link_libraries( toktx ktx objUtil )
 target_include_directories(
-  libktx 
+  toktx 
   PRIVATE 
   ${KTX_SOURCE_DIR}/other_include
   ${KTX_SOURCE_DIR}/tools/toktx
-  ${KTX_SOURCE_DIR}/lib
   ${KTX_SOURCE_DIR}/lib/basisu
+  ${KTX_SOURCE_DIR}/lib/basisu/zstd
   ${KTX_SOURCE_DIR}/lib/dfdutils
   $<TARGET_PROPERTY:objUtil,INTERFACE_INCLUDE_DIRECTORIES>
   $<TARGET_PROPERTY:ktx,INTERFACE_INCLUDE_DIRECTORIES> )
-target_include_directories(libktx PUBLIC  include)
+target_include_directories(toktx PUBLIC  include)
 target_link_options(
-        libktx
+        toktx
     PUBLIC
         ${LIBKTX_EMC_LINK_FLAGS}
     )
-set_target_properties( libktx PROPERTIES OUTPUT_NAME "libktx")
+set_target_properties( toktx PROPERTIES OUTPUT_NAME "toktx")
 
 add_custom_command(
-        TARGET libktx POST_BUILD
+        TARGET toktx POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E make_directory dist
                 COMMENT "Creating 'dist' directory")
 add_custom_command(
-        TARGET libktx POST_BUILD
+        TARGET toktx POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy
-                ${CMAKE_CURRENT_BINARY_DIR}/libktx.js
-                ${CMAKE_CURRENT_SOURCE_DIR}/dist/libktx.js
-                COMMENT "Copying 'libwebp.js' library to dist/libktx.js'")
+                ${CMAKE_CURRENT_BINARY_DIR}/toktx.js
+                ${CMAKE_CURRENT_SOURCE_DIR}/dist/toktx.js
+                COMMENT "Copying 'toktx.js' library to dist/toktx.js'")
 add_custom_command(
-        TARGET libktx POST_BUILD
+        TARGET toktx POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy
-                ${CMAKE_CURRENT_BINARY_DIR}/libktx.wasm
-                ${CMAKE_CURRENT_SOURCE_DIR}/dist/libktx.wasm
-                COMMENT "Copying 'libktx.wasm' library to 'dist/libktx.wasm'")
+                ${CMAKE_CURRENT_BINARY_DIR}/toktx.wasm
+                ${CMAKE_CURRENT_SOURCE_DIR}/dist/toktx.wasm
+                COMMENT "Copying 'toktx.wasm' library to 'dist/toktx.wasm'")
+add_custom_command(
+        TARGET toktx POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy
+                ${CMAKE_CURRENT_BINARY_DIR}/toktx.js
+                ${CMAKE_CURRENT_SOURCE_DIR}/examples/toktx.js
+                COMMENT "Copying 'toktx.js' library to examples/toktx.js'")
+add_custom_command(
+        TARGET toktx POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy
+                ${CMAKE_CURRENT_BINARY_DIR}/toktx.wasm
+                ${CMAKE_CURRENT_SOURCE_DIR}/examples/toktx.wasm
+                COMMENT "Copying 'toktx.wasm' library to 'examples/toktx.wasm'")
