Export additional function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ set(
   "SHELL:-s EXPORTED_RUNTIME_METHODS=[\'GL\']"
   "SHELL:-s GL_PREINITIALIZED_CONTEXT=1"
   "SHELL:-s EXPORTED_FUNCTIONS=${LIBKTX_EXPORTED_FUNCTIONS}"
-  "SHELL:-s EXPORTED_RUNTIME_METHODS=cwrap,getValue"
+  "SHELL:-s EXPORTED_RUNTIME_METHODS=cwrap,getValue,writeArrayToMemory"
 )
 
 #message(STATUS "HELLOOOOOOOOOO Dir ${PROJECT_SOURCE_DIR}")
