Simplify CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,37 +8,13 @@ if(POLICY CMP0072)
   cmake_policy(SET CMP0072 NEW)
 endif()
 
-message(STATUS "Source Dir ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/KTX-Software ${CMAKE_CURRENT_SOURCE_DIR}/KTX-Software/build)
 
-project(toktx)
+project(libktx_js)
 
 set(
   KTX_SOURCE_DIR "${PROJECT_SOURCE_DIR}/KTX-Software"
 )
-
-set(
-  LIBKTX_EXPORTED_FUNCTIONS "_malloc,_free,_main" 
-)
-set(
-  LIBKTX_EMC_LINK_FLAGS
-  --bind
-  "SHELL:--source-map-base ./"
-  "SHELL:-s ALLOW_MEMORY_GROWTH=1"
-  "SHELL:-s ASSERTIONS=0"
-  "SHELL:-s ERROR_ON_UNDEFINED_SYMBOLS=0"
-  "SHELL:-s MALLOC=emmalloc"
-  "SHELL:-s MODULARIZE=1"
-  "SHELL:-s FULL_ES3=1"
-  "SHELL:-s INVOKE_RUN=0"
-  "SHELL:-s EXPORT_NAME=TOKTX"
-  "SHELL:-s EXPORTED_RUNTIME_METHODS=[\'GL\']"
-  "SHELL:-s GL_PREINITIALIZED_CONTEXT=1"
-  "SHELL:-s EXPORTED_FUNCTIONS=${LIBKTX_EXPORTED_FUNCTIONS}"
-  "SHELL:-s EXPORTED_RUNTIME_METHODS=cwrap,getValue,writeArrayToMemory"
-)
-
-#message(STATUS "HELLOOOOOOOOOO Dir ${PROJECT_SOURCE_DIR}")
 
 set(
     KTX_EMC_LINK_FLAGS
@@ -51,7 +27,7 @@ set(
     "SHELL:-s FULL_ES3=1"
 )
 
-add_executable( libktx_js src/toktx_js/ktx_wrapper.cpp )
+add_executable( libktx_js src/libktx_js/ktx_wrapper.cpp )
 target_link_libraries( libktx_js ktx )
 target_include_directories( 
   libktx_js 
@@ -94,63 +70,3 @@ add_custom_command(
                 ${CMAKE_CURRENT_BINARY_DIR}/libktx.wasm
                 ${CMAKE_CURRENT_SOURCE_DIR}/examples/libktx.wasm
                 COMMENT "Copying 'libktx.wasm' library to 'examples/libktx.wasm'")
-
-add_executable(toktx 
-  ${KTX_SOURCE_DIR}/lib/basisu/encoder/jpgd.cpp
-  ${KTX_SOURCE_DIR}/interface/js_binding/ktx_wrapper.cpp 
-  ${KTX_SOURCE_DIR}/tools/toktx/image.cc
-  ${KTX_SOURCE_DIR}/tools/toktx/jpgimage.cc
-  ${KTX_SOURCE_DIR}/tools/toktx/lodepng.cc
-  ${KTX_SOURCE_DIR}/tools/toktx/npbmimage.cc
-  ${KTX_SOURCE_DIR}/tools/toktx/pngimage.cc
-  src/toktx_js/toktx_wrapper.cc
-)
-create_version_header( src/toktx_js toktx )
-
-target_link_libraries( toktx ktx objUtil )
-target_include_directories(
-  toktx 
-  PRIVATE 
-  ${KTX_SOURCE_DIR}/other_include
-  ${KTX_SOURCE_DIR}/tools/toktx
-  ${KTX_SOURCE_DIR}/lib/basisu
-  ${KTX_SOURCE_DIR}/lib/basisu/zstd
-  ${KTX_SOURCE_DIR}/lib/dfdutils
-  $<TARGET_PROPERTY:objUtil,INTERFACE_INCLUDE_DIRECTORIES>
-  $<TARGET_PROPERTY:ktx,INTERFACE_INCLUDE_DIRECTORIES> )
-target_include_directories(toktx PUBLIC  include)
-target_link_options(
-        toktx
-    PUBLIC
-        ${LIBKTX_EMC_LINK_FLAGS}
-    )
-set_target_properties( toktx PROPERTIES OUTPUT_NAME "toktx")
-
-add_custom_command(
-        TARGET toktx POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E make_directory dist
-                COMMENT "Creating 'dist' directory")
-add_custom_command(
-        TARGET toktx POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy
-                ${CMAKE_CURRENT_BINARY_DIR}/toktx.js
-                ${CMAKE_CURRENT_SOURCE_DIR}/dist/toktx.js
-                COMMENT "Copying 'toktx.js' library to dist/toktx.js'")
-add_custom_command(
-        TARGET toktx POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy
-                ${CMAKE_CURRENT_BINARY_DIR}/toktx.wasm
-                ${CMAKE_CURRENT_SOURCE_DIR}/dist/toktx.wasm
-                COMMENT "Copying 'toktx.wasm' library to 'dist/toktx.wasm'")
-add_custom_command(
-        TARGET toktx POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy
-                ${CMAKE_CURRENT_BINARY_DIR}/toktx.js
-                ${CMAKE_CURRENT_SOURCE_DIR}/examples/toktx.js
-                COMMENT "Copying 'toktx.js' library to examples/toktx.js'")
-add_custom_command(
-        TARGET toktx POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy
-                ${CMAKE_CURRENT_BINARY_DIR}/toktx.wasm
-                ${CMAKE_CURRENT_SOURCE_DIR}/examples/toktx.wasm
-                COMMENT "Copying 'toktx.wasm' library to 'examples/toktx.wasm'")
